==> whitecatboard/Lua-RTOS-ESP32/sys/drivers/platform/esp8266/uart.c <==
#include "whitecat.h"
#include <FreeRTOS.h>
#include <queue.h>
#include <stdio.h>
#include <stdarg.h>
#include <signal.h>
#include <pthread.h>
#include <sys/drivers/uart.h>
#include <sys/drivers/gpio.h>
#include <sys/drivers/console.h>
#include <sys/drivers/cpu.h>
#include <sys/syslog.h>
#include <sys/status.h>
#define UART_FLAG_INIT		(1 << 1)
#define UART_FLAG_IRQ_INIT	(1 << 2)
#define UART_OUTPUT_NONE 		 0
#define UART_OUTPUT_DEFAULT 	(1 << 0)
#define UART_OUTPUT_ALTERNATE 	(1 << 1)

void uart_pin_config(u8_t unit, u8_t *rx, u8_t *tx) {
	wait_tx_empty(0);
	wait_tx_empty(1);

	switch (unit) {
		case 0:
			// Enable UTX0
			PIN_PULLUP_DIS(PERIPHS_IO_MUX_U0TXD_U);
			PIN_FUNC_SELECT(PERIPHS_IO_MUX_U0TXD_U, FUNC_U0TXD);
	
			// Enable U0RX
	        PIN_PULLUP_EN(PERIPHS_IO_MUX_U0RXD_U);
	        PIN_FUNC_SELECT(PERIPHS_IO_MUX_U0RXD_U, FUNC_U0RXD);

			// Disable U1TX
	   	 	PIN_FUNC_SELECT(PERIPHS_IO_MUX_GPIO2_U, FUNC_GPIO2);					

			if (rx) *rx = PIN_GPIO3;
			if (tx) *tx = PIN_GPIO1;
			
			break;
						
		case 1:
			// Disable UTX0
			PIN_FUNC_SELECT(PERIPHS_IO_MUX_U0TXD_U, FUNC_GPIO1);

			// Enable U1TX
		    PIN_PULLUP_DIS(PERIPHS_IO_MUX_GPIO2_U);
		    PIN_FUNC_SELECT(PERIPHS_IO_MUX_GPIO2_U, FUNC_U1TXD_BK);	
							

			if (rx) *rx = PIN_NOPIN;
			if (tx) *tx = PIN_GPIO2;

			break;

		case 2:
			// Disable UTX0
			PIN_FUNC_SELECT(PERIPHS_IO_MUX_U0TXD_U, FUNC_GPIO1);
		
			// Enable U0TX*
		    PIN_PULLUP_DIS(PERIPHS_IO_MUX_MTDO_U);
		    PIN_FUNC_SELECT(PERIPHS_IO_MUX_MTDO_U, FUNC_UART0_RTS);

			// Enable U0RX*
		    PIN_PULLUP_EN(PERIPHS_IO_MUX_MTCK_U);
		    PIN_FUNC_SELECT(PERIPHS_IO_MUX_MTCK_U, FUNC_UART0_CTS);

			// Enable U1TX
		    PIN_PULLUP_DIS(PERIPHS_IO_MUX_GPIO2_U);
		    PIN_FUNC_SELECT(PERIPHS_IO_MUX_GPIO2_U, FUNC_U1TXD_BK);					

			if (rx) *rx = PIN_GPIO13;
			if (tx) *tx = PIN_GPIO15;
			
			break;
	}
	
	// Reset FIFO
	//SET_PERI_REG_MASK(UART_CONF0(unit), UART_RXFIFO_RST | UART_TXFIFO_RST);
	//CLEAR_PERI_REG_MASK(UART_CONF0(unit), UART_RXFIFO_RST | UART_TXFIFO_RST);
}

static void uart_rx_intr_handler(void) {
    BaseType_t xHigherPriorityTaskWoken;
    xHigherPriorityTaskWoken = pdFALSE;
	u8_t byte;
	int uart_no = 0;
	int signal = 0;
		
	u32_t uart_intr_status = READ_PERI_REG(UART_INT_ST(uart_no)) ;

    while (uart_intr_status != 0x0) {
        if (UART_FRM_ERR_INT_ST == (uart_intr_status & UART_FRM_ERR_INT_ST)) {
			
            WRITE_PERI_REG(UART_INT_CLR(uart_no), UART_FRM_ERR_INT_CLR);
        } else if (UART_RXFIFO_FULL_INT_ST == (uart_intr_status & UART_RXFIFO_FULL_INT_ST)) {
            while ((READ_PERI_REG(UART_STATUS(uart_no)) >> UART_RXFIFO_CNT_S)&UART_RXFIFO_CNT) {
				byte = READ_PERI_REG(UART_FIFO(uart_no)) & 0xFF;
				if (queue_byte(uart_no, byte, &signal)) {
		            // Put byte to UART queue
		            xQueueSendFromISR(uart[(uart0_swaped==1?2:0)].q, &byte, &xHigherPriorityTaskWoken);		              			
				} else {
					if (signal) {
						_pthread_queue_signal(signal);
					}
				}
            }

            WRITE_PERI_REG(UART_INT_CLR(uart_no), UART_RXFIFO_FULL_INT_CLR);
        } else if (UART_RXFIFO_TOUT_INT_ST == (uart_intr_status & UART_RXFIFO_TOUT_INT_ST)) {
            while ((READ_PERI_REG(UART_STATUS(uart_no)) >> UART_RXFIFO_CNT_S)&UART_RXFIFO_CNT) {
				byte = READ_PERI_REG(UART_FIFO(uart_no)) & 0xFF;
				if (queue_byte(uart_no, byte, &signal)) {
		            // Put byte to UART queue
		            xQueueSendFromISR(uart[(uart0_swaped==1?2:0)].q, &byte, &xHigherPriorityTaskWoken);		              			
				} else {
					if (signal) {
						_pthread_queue_signal(signal);
					}
				}
            }

            WRITE_PERI_REG(UART_INT_CLR(uart_no), UART_RXFIFO_TOUT_INT_CLR);
        } else if (UART_TXFIFO_EMPTY_INT_ST == (uart_intr_status & UART_TXFIFO_EMPTY_INT_ST)) {
            WRITE_PERI_REG(UART_INT_CLR(uart_no), UART_TXFIFO_EMPTY_INT_CLR);
            CLEAR_PERI_REG_MASK(UART_INT_ENA(uart_no), UART_TXFIFO_EMPTY_INT_ENA);
        }

        uart_intr_status = READ_PERI_REG(UART_INT_ST(uart_no)) ;
    }
	
	portEND_SWITCHING_ISR(xHigherPriorityTaskWoken);
}

void uart_init(u8_t unit, u32_t brg, u32_t mode, u32_t qs) {
	u8_t rx, tx;
	
    unit--;
	
	// If requestes queue size is greater than current size, delete queue and create
	// a new one
    if (qs > uart[unit].qs) {
		if (uart[unit].q) {
			vQueueDelete(uart[unit].q);
		}
		
		uart[unit].q  = xQueueCreate(qs, sizeof(u8_t));
	}
	
	uart_pin_config(uart[unit].phys, &rx, &tx);

	if (!uart0_swaped) {
		syslog(LOG_INFO, "%s: at pins rx=%s/tx=%s", names[unit], cpu_pin_name(rx), cpu_pin_name(tx));
		syslog(LOG_INFO, "%s: speed %d bauds",names[unit], brg);  
	}  

	uart_update_params(uart[unit].phys, brg, UART_WordLength_8b, USART_Parity_None, USART_StopBits_1);
	
    uart[unit].brg = brg; 
    uart[unit].qs  = qs; 

    uart[unit].flags |= UART_FLAG_INIT;
}

void uart_write(u8_t unit, char byte) {
    unit--;

    while (((READ_PERI_REG(UART_STATUS(uart[unit].phys)) & (UART_TXFIFO_CNT << UART_TXFIFO_CNT_S)) >> UART_TXFIFO_CNT_S & UART_TXFIFO_CNT) >= 126);
    WRITE_PERI_REG(UART_FIFO(uart[unit].phys), byte);
}

void uart_writes(u8_t unit, char *s) {
    unit--;

    while (*s) {
	    while (((READ_PERI_REG(UART_STATUS(uart[unit].phys)) & (UART_TXFIFO_CNT << UART_TXFIFO_CNT_S)) >> UART_TXFIFO_CNT_S & UART_TXFIFO_CNT) >= 126);
	    WRITE_PERI_REG(UART_FIFO(uart[unit].phys) , *s++);
   }
}
